Fix deploy script

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm ci
 
       - name: Test 🐛
-        run: npm test
+        run: npm run test:coverage
 
       - name: Build 🔧
         run: npm run build
