--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/webpack-env": "1.16.3"
   },
   "scripts": {
+    "preview": "parcel serve -d build src/index.html",
     "start": "contentful-extension-scripts start",
     "build": "contentful-extension-scripts build",
     "lint": "eslint ./ --ext .js,.jsx,.ts,.tsx && tsc -p ./ --noEmit",
